# datafun-05-sql

./: .gitignore  CITATION.cff  README.md  pyproject.toml  zensical.toml
.accountability/: surfaces.toml
artifacts/duckdb/: retail.duckdb
artifacts/sqlite/: retail.sqlite
data/processed/: randow_shelter_adoption_processed.csv  randow_shelter_summary.csv
data/raw/civic_event/: attendance.csv
data/raw/retail/: sale.csv
data/raw/shelter/: adoption.csv  shelter.csv
docs/: glossary.md  index.md  project-instructions.md  your-files.md
docs/module/: duckdb-and-sqlite.md  index.md
sql/duckdb/: case_retail_bootstrap.sql  case_retail_clean.sql  randow_shelter_bootstrap.sql  randow_shelter_clean.sql  randow_shelter_query_adoptions_by_type.sql  randow_shelter_query_revenue_by_shelter.sql  randow_shelter_query_shelter_count.sql
sql/sqlite/: case_retail_bootstrap.sql  case_retail_clean.sql  randow_retail_query_top_products.sql
src/datafun/: __init__.py  app_retail_duckdb_case.py  app_retail_sqlite_case.py  app_retail_sqlite_sum-randow.py  app_shelter_duckdb_randow.py
tests/: test_app_case.py
