# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================
# Updated: 2026-05-27
# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.
# CUSTOM: Update identity and build tool src folders.

# ============================================================
# SECTION 1: PROJECT IDENTITY (name, version, CUSTOM dependencies)
# ============================================================

[project]
name = "datafun-05-sql" # CUSTOM: Package distribution name (use lowercase and dashes).
readme = "README.md"
requires-python = ">=3.14"
version = "1.1.0"

dependencies = [
    # REQ.DEPS: External packages used by the project code.
    "datafun-toolkit",
    "duckdb",
    "pandas",
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mkdocstrings[python]",
    "zensical",
]

# ============================================================
# SECTION 2: TOOL CONFIGURATION (Professional basics)
# ============================================================

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: static type checking. 'basic' catches bugs without dep-package noise.
pythonVersion = "3.14"
include = ["src"]    # always src, add "notebooks" to add CLI checks on .ipynb
extraPaths = ["src"] # resolve `imports` from src/
exclude = [
    "**/node_modules",
    "**/.*",
    ".venv",
    "**/__pycache__",
     "dist",
      "build"
]

reportMissingImports = "warning"
reportMissingTypeStubs = "none"  # untyped third-party libs
reportPrivateUsage = "none"      # allow _private access (e.g. _version.py)

# silence Unknown-type noise from untyped deps (active under strict)
reportUnknownArgumentType  = "none"
reportUnknownLambdaType    = "none"
reportUnknownMemberType    = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType  = "none"

venvPath = "."  # WHERE to look for virtual environments (here: the project root).
venv = ".venv"  # WHICH venv folder to use inside venvPath (the conventional name).

typeCheckingMode = "basic" # CUSTOM: off | basic | standard | strict

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Ensure tests are discoverable and coverage is visible.
minversion = "9.0"
testpaths = ["tests"]
addopts = " --cov=src --cov-report=term-missing"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Ruff provides fast linting and formatting with deterministic output.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard line length, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py314" # WHY: Match latest supported Python version.
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "preserve" # Preserve existing quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Professional baseline rules without requiring advanced refactors.
select = [
    "E",   # Basic syntax and structural correctness
    "F",   # Undefined names and unused imports
    "W",   # Warnings that catch easy issues early
    "I",   # Deterministic import ordering
    "UP",  # Modern Python constructs
    "B",   # Common bug patterns
    "PTH", # Prefer pathlib patterns
]
ignore = [
  "E501", # Final line length handled by formatter
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

# === PER-FILE IGNORES (DEPENDS ON DOCSTRING POLICY) ===

[tool.ruff.lint.per-file-ignores]
# WHY: Some files MUST NOT undergo linting or automated fixes.

# POLICY: Docstring rules are NOT enabled (no "D" in [tool.ruff.lint].select).
"src/**/__init__.py" = ["F401"]     # Allow re-export patterns
"src/**/_version.py" = ["ALL"]      # Auto-generated file (do not lint)
"notebooks/**/*.ipynb" = ["F821"]   # Notebooks may have runtime-defined names

# OPTIONAL: If docstring rules are enabled later (add "D" to select),
# replace the block above with the following:
#
# [tool.ruff.lint.per-file-ignores]
# "src/**/__init__.py" = ["D104", "F401"]    # Allow omission + re-export patterns
# "src/**/_version.py" = ["ALL"]             # Auto-generated file (do not lint)
# "tests/**/*.py" = ["D"]                    # Tests have different docstring norms
# "notebooks/**/*.ipynb" = ["F821"]          # Notebooks may have runtime-defined names

# === CHOOSE PROJECT DOC STYLE ===

[tool.ruff.lint.pydocstyle]
# REQ: Google style is the project-wide docstring convention.
convention = "google"   # ALT: "numpy" choose one, never mix.

# ============================================================
# SECTION 3: BUILD SYSTEM (boilerplate; CUSTOM src/ agreement)
# ============================================================
#
# REQ.PROJECT: A build system MUST be declared for package discovery and publishing.
# REQ.STRUCTURE: All importable code MUST live under src/.
# WHY src/ layout: Prevents accidental imports from the repo root;
#     ensures consistent behavior across IDEs, tests, CI, and PyPI.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
# CUSTOM: Must match src/ folders.
packages = ["src/datafun"]  # REQ.PACKAGES: Discovery rooted at src/.
